--- a/Latex/ReportAG.bib
+++ b/Latex/ReportAG.bib
@@ -18,3 +18,10 @@ url = {http://www.fit.vutbr.cz/research/view_pub.php?id=7171}
 	year		= "1993",
 	month		= "September",
 }
+
+@BOOK{Crai55,
+author = {J. Craig},
+title = {Introduction to Robotics: Mechanics and Control},
+publisher = {Addison-Wesley},
+year = {1955}
+}
